Preliminary styles, html, nonfunction script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
 </head>
 <body>
-
+    <main>
+        <div id="tic-tac-toe">
+            <div id="1" data-id="1" class="square"></div>
+            <div id="2" data-id="2" class="square"></div>
+            <div id="3" data-id="3" class="square"></div>
+            <div id="4" data-id="4" class="square"></div>
+            <div id="5" data-id="5" class="square"></div>
+            <div id="6" data-id="6" class="square"></div>
+            <div id="7" data-id="7" class="square"></div>
+            <div id="8" data-id="8" class="square"></div>
+            <div id="9" data-id="9" class="square"></div>
+        </div>
+    </main>
     <script src="tictactoe.js"></script>
 </body>
 </html>
