Object functions, html structure, styles

--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
 <body>
     <main>
         <div id="tic-tac-toe">
-            <div id="1" data-id="1" class="square"></div>
-            <div id="2" data-id="2" class="square"></div>
-            <div id="3" data-id="3" class="square"></div>
-            <div id="4" data-id="4" class="square"></div>
-            <div id="5" data-id="5" class="square"></div>
-            <div id="6" data-id="6" class="square"></div>
-            <div id="7" data-id="7" class="square"></div>
-            <div id="8" data-id="8" class="square"></div>
-            <div id="9" data-id="9" class="square"></div>
+            <div id="0" data-id="1" class="square"></div>
+            <div id="1" data-id="2" class="square"></div>
+            <div id="2" data-id="3" class="square"></div>
+            <div id="3" data-id="4" class="square"></div>
+            <div id="4" data-id="5" class="square"></div>
+            <div id="5" data-id="6" class="square"></div>
+            <div id="6" data-id="7" class="square"></div>
+            <div id="7" data-id="8" class="square"></div>
+            <div id="8" data-id="9" class="square"></div>
+        </div>
+
+        <div id="victory-screen" class="hidden">
+            <p>Congratulations!</p>
+            <button id="new-game">Start New Game</button>
         </div>
     </main>
     <script src="tictactoe.js"></script>
