gameFlow now handles draws, fixed checkVictory()
checkVictory was splicing strings of the first three victory paths the
wrong way, so victory was not possible in those paths. endGame() and
displayVictory() now handles draws.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </main>
     <div id="victory-screen" class="hidden">
-        <p>Congratulations!</p>
+        <p id="victory-text">Congratulations!</p>
         <button id="new-game">Start New Game</button>
     </div>
     <script src="tictactoe.js"></script>
