Added styles, sidebar with placeholders

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
 </head>
 <body>
+    <div id="sidebar">
+        <div id="score">Score</div>
+        <div id="x-player">X Player:</div>
+        <div id="o-player">O Player</div>
+        <div id="settings">Settings
+            <input type="radio" name="difficulty" id="easy" value="easy" checked>
+            <label for="easy">Easy</label>
+            <input type="radio" name="difficulty" id="hard" value="hard">
+            <label for="hard">Hard</label>
+        </div>
+    </div>
     <main>
         <div id="tic-tac-toe">
             <div id="0" data-id="1" class="square"></div>
