Scores update at end by reading player object now

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div id="sidebar">
         <div id="score">Score</div>
-        <div id="x-player">X Player:</div>
-        <div id="o-player">O Player</div>
+        <div id="x-player">X Player:<span id="x-player-score">0</span></div>
+        <div id="o-player">O Player:<span id="o-player-score">0</span></div>
         <div id="settings">Settings
             <input type="radio" name="difficulty" id="easy" value="easy" checked>
             <label for="easy">Easy</label>
