--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
@@ -12,8 +15,8 @@
 <body>
     <div id="sidebar">
         <div id="score">Score</div>
-        <div id="x-player">X Player:<span id="x-player-score">0</span></div>
-        <div id="o-player">O Player:<span id="o-player-score">0</span></div>
+        <div id="x-player">X Player: <span id="x-player-score">0</span></div>
+        <div id="o-player">O Player: <span id="o-player-score">0</span></div>
         <div id="settings">Settings
             <input type="radio" name="difficulty" id="easy" value="easy" checked>
             <label for="easy">Easy</label>
