--- a/index.html
+++ b/index.html
@@ -13,36 +13,38 @@
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
 </head>
 <body>
-    <div id="sidebar">
-        <div id="x-player">X Player: <span id="x-player-score">0</span></div>
-        <div id="o-player">O Player: <span id="o-player-score">0</span></div>
-        <div id="settings">Settings
-            <div>
-                <input type="radio" name="difficulty" id="easy" value="easy">
-                <label for="easy">Easy</label>
-                <input type="radio" name="difficulty" id="hard" value="hard" checked>
-                <label for="hard">Hard</label>
+    <header>Tic-Tac-Toe</header>
+    <main>
+        <div id="sidebar">
+            <div id="x-player">X Player: <span id="x-player-score">0</span></div>
+            <div id="o-player">O Player: <span id="o-player-score">0</span></div>
+            <div id="settings">Settings
+                <div>
+                    <input type="radio" name="difficulty" id="easy" value="easy">
+                    <label for="easy">Easy</label>
+                    <input type="radio" name="difficulty" id="hard" value="hard" checked>
+                    <label for="hard">Hard</label>
+                </div>
             </div>
         </div>
-    </div>
-    <main>
-        <div id="tic-tac-toe">
-            <div id="0" data-id="1" class="square"></div>
-            <div id="1" data-id="2" class="square"></div>
-            <div id="2" data-id="3" class="square"></div>
-            <div id="3" data-id="4" class="square"></div>
-            <div id="4" data-id="5" class="square"></div>
-            <div id="5" data-id="6" class="square"></div>
-            <div id="6" data-id="7" class="square"></div>
-            <div id="7" data-id="8" class="square"></div>
-            <div id="8" data-id="9" class="square"></div>
-        </div>
+        <div id="tic-tac-toe-wrapper">
+            <div id="tic-tac-toe">
+                <div id="0" data-id="1" class="square"></div>
+                <div id="1" data-id="2" class="square"></div>
+                <div id="2" data-id="3" class="square"></div>
+                <div id="3" data-id="4" class="square"></div>
+                <div id="4" data-id="5" class="square"></div>
+                <div id="5" data-id="6" class="square"></div>
+                <div id="6" data-id="7" class="square"></div>
+                <div id="7" data-id="8" class="square"></div>
+                <div id="8" data-id="9" class="square"></div>
+            </div>
     </main>
     <div id="victory-screen" class="hidden">
         <p id="victory-text">Congratulations!</p>
         <button id="new-game">Start New Game</button>
     </div>
-    <footer>Designed by Mark Elliott <a href="https://github.com/Mark-Elliott5"><img class="github-link" src="images/github-mark-white.png"></a></footer>
+    <footer><a href="https://github.com/Mark-Elliott5">Designed by Mark Elliott <img class="github-link" src="images/github-mark-white.png"></a></footer>
     <script src="tictactoe.js"></script>
 </body>
 </html>
